[package]
name = "oku"
version = "0.1.1"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
edition = "2021"
exclude = ["/.github/**/*", "/.cargo/**/*", "/branding/**/*", "/rust-toolchain", "/.gitignore", "/.whitesource", "/renovate.json", "/CODE_OF_CONDUCT.md", "/CONTRIBUTING.md", "/LICENSE.md", "/SECURITY.md", "/COPYING", "/NOTICE"]
license = "AGPL-3.0-or-later"
description = "Browse & express yourself"
repository = "https://github.com/OkuBrowser/oku"
homepage = "https://okubrowser.github.io/"
readme = "README.md"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.39", features = ["unstable-locales", "serde"] }
cid = "0.11.1"
directories-next = "2.0.0"
futures = "0.3.31"
gdk = { version = "*", package = "gdk4", features = ["v4_14"] }
gio = { version = "*", features = ["v2_80"] }
glib = { version = "*", features = ["v2_80"] }
glib-macros = { version = "*" }
gtk = { version = "*", package = "gtk4", features = ["gnome_47"], default-features = false }
ipfs = { git = "https://github.com/dariusc93/rust-ipfs.git", rev = "c80e24e73124fa40c2168760eef3b837888e9ae7", package = "rust-ipfs"}
libadwaita = { version = "*", features = ["v1_6", "gio_v2_80"] }
oku-fs = { git = "https://github.com/OkuBrowser/oku-fs", features = ["fuse"] }
# oku-fs = { path = "/home/emil/Documents/GitHub/oku-fs", features = ["fuse"] }
pango = { version = "*" }
url = "2.5.4"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
webkit2gtk = { version = "*", package = "webkit6", features = ["v2_44"] }
tree_magic_mini = { version = "3.1.6", features = ["with-gpl-data"] }
open = "5.3.2"
env_logger = "0.11.6"
log = "0.4.25"
toml = "0.8.19"
serde = "1.0.217"
uuid = { version = "1.12.1", features = ["v7", "fast-rng", "serde"] }
miette = "7.4.0"
html-escape = "0.2.13"
bytes = "1.9.0"
native_db = "0.8.1"
native_model = "0.4.20"
rayon = "1.10.0"
tantivy = "0.22.0"
# vox = { path = "/home/emil/Documents/GitHub/vox", features = ["ram_provider"] }
vox = { git = "https://github.com/emmyoh/vox", features = ["ram_provider"] }
bs58 = "0.5.1"
showfile = { version = "0.1.1", features = ["gio"], default-features = false}
opengraph = "0.2.4"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = 0

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/oku", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/oku/README", "644"],
    ["COPYING", "usr/share/doc/oku/COPYING", "644"],
    ["data/hicolor/**/*", "/usr/share/icons/hicolor/", "644"],
]

[package.metadata.rpm]
package = "oku"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
oku = { path = "/usr/bin/oku" }
