[package]
name = "oku-core"
version = "0.1.0"
edition = "2021"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
description = "A distributed file system for use with the Oku browser."
readme = "README.md"
repository = "https://github.com/emmyoh/oku/"
documentation = "https://emmyoh.github.io/oku/oku_core/"
license = "AGPL-3.0-or-later"
default-run = "oku-core"
resolver = "3"

[lib]
name = "oku_core"
path = "src/lib.rs"
# crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "oku-core"
path = "src/cli/mod.rs"
doc = false
required-features = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.11.1"
cfg-if = "1.0.4"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"], optional = true }
fuse_mt = { version = "0.6.3", optional = true }
fuser = { version = "0.16.0", features = ["libfuse"], optional = true }
futures = "0.3.32"
iroh = { version = "0.98.1", features = [
    "address-lookup-mdns",
    "address-lookup-pkarr-dht",
    "default",
    "fast-apple-datapath"
] }
iroh-docs = { version = "0.98.0", features = ["default"] }
iroh-base = "0.98.0"
iroh-blobs = { version = "0.100.0", features = ["fs-store"] }
iroh-gossip = "0.98.0"
iroh-tickets = "0.5.0"
libc = { version = "0.2.186", optional = true }
mainline = { version = "6.1.1", features = ["async"] }
miette = { version = "7.6.0", features = ["fancy"] }
path-clean = "1.0.1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["signal"] }
env_logger = { version = "0.11.10", optional = true }
log = "0.4.29"
bs58 = "0.5.1"
anyhow = "1.0.102"
native_db = "0.8.2"
native_model = "0.4.20"
serde = "1.0.228"
toml = "1.1.2"
rayon = "1.12.0"
url = { version = "2.5.8", features = ["serde"] }
tantivy = "0.26.1"
zebra = { git = "https://github.com/emmyoh/zebra", version = "0.1.0", features = [
    "default_db",
] }
# zebra = { path = "/home/emil/Documents/GitHub/zebra", version = "0.1.0", features = [
#     "default_db",
# ] }
data-encoding = "2.11.0"
hex = "0.4.3"
jiff = { version = "0.2.24", optional = true }
dashmap = "6.1.0"
tree_magic_mini = { version = "3.2.2", features = ["with-gpl-data"] }
serde_json = "1.0.149"
easy_fuser = { version = "0.4.5", features = ["parallel", "deadlock_detection"], optional = true }
debug-ignore = "1.0.5"
humantime = "2.3.0"

[features]
default = []
persistent = []
fuse = ["dep:libc", "dep:fuse_mt", "dep:fuser", "dep:easy_fuser"]
cli = ["dep:clap", "dep:env_logger", "dep:jiff"]

