[package]
name = "oku"
version = "0.1.1"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
edition = "2021"
exclude = [
    "/.github/**/*",
    "/.cargo/**/*",
    "/branding/**/*",
    "/rust-toolchain",
    "/.gitignore",
    "/.whitesource",
    "/renovate.json",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/LICENSE.md",
    "/SECURITY.md",
    "/COPYING",
    "/NOTICE",
]
license = "AGPL-3.0-or-later"
description = "Browse & express yourself"
repository = "https://github.com/OkuBrowser/oku"
homepage = "https://okubrowser.github.io/"
readme = "README.md"
resolver = "3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.44", features = ["unstable-locales", "serde"] }
cid = "0.11.2"
directories-next = "2.0.0"
futures = "0.3.32"
gdk = { version = "0.11.2", package = "gdk4", features = ["v4_14"] }
gio = { version = "0.22.5", features = ["v2_80"] }
glib = { version = "0.22.5", features = ["v2_80"] }
glib-macros = { version = "0.22.2" }
gtk = { version = "0.11.2", package = "gtk4", features = [
    "gnome_47",
], default-features = false }
ipfs = { git = "https://github.com/dariusc93/rust-ipfs.git", rev = "eae2225b89bddf6518d1647387a5695e5d0da1f0", package = "rust-ipfs" }
libadwaita = { version = "0.9.1", features = ["v1_6", "gio_v2_80"] }
# oku-fs = { git = "https://github.com/OkuBrowser/oku-fs", features = ["fuse"] }
oku-core = { path = "../oku-core", features = ["fuse"] }
pango = { version = "0.22.4" }
url = "2.5.8"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
webkit2gtk = { version = "0.6.1", package = "webkit6", features = ["v2_44"] }
tree_magic_mini = { version = "3.2.2", features = ["with-gpl-data"] }
open = "5.3.4"
env_logger = "0.11.10"
log = "0.4.29"
toml = "1.1.2"
serde = "1.0.228"
uuid = { version = "1.23.1", features = ["v7", "fast-rng", "serde"] }
miette = "7.6.0"
html-escape = "0.2.13"
bytes = "1.11.1"
native_db = "0.8.2"
native_model = "0.4.20"
rayon = "1.12.0"
tantivy = "0.26.1"
# vox = { path = "/home/emil/Documents/GitHub/vox", features = ["ram_provider"] }
vox = { git = "https://github.com/emmyoh/vox", features = ["ram_provider"] }
bs58 = "0.5.1"
showfile = { version = "0.1.1", features = ["gio"], default-features = false }
opengraph = "0.2.4"

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    [
        "target/x86_64-unknown-linux-gnu/release/oku",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/oku/README",
        "644",
    ],
    [
        "COPYING",
        "usr/share/doc/oku/COPYING",
        "644",
    ],
    [
        "data/hicolor/**/*",
        "/usr/share/icons/hicolor/",
        "644",
    ],
]

[package.metadata.rpm]
package = "oku"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
oku = { path = "/usr/bin/oku" }
